# auto-enum

./: Cargo.toml  LICENSE
examples/: enums.rs
src/: common.rs  enum_flags.rs  int_enums.rs  int_eval.rs  lib.rs
